M-181. Исправен title и убраны лишние пробелы.

--- a/shkolnikam.html
+++ b/shkolnikam.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике 5-ый класс
+			Репетитор по математике с 4 по 11 класс
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Репетитор по математике с 4 по 11 класс ">
-		<meta name="keywords" content="Репетитор по математике с 4 по 11 класс ">
+		<meta name="description" content="Репетитор по математике с 4 по 11 класс">
+		<meta name="keywords" content="Репетитор по математике с 4 по 11 класс">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link href="style-new.css" rel="stylesheet" type="text/css">
@@ -31,7 +31,7 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике с 4 по 11 класс </h1>
+			<h1>Репетитор по математике с 4 по 11 класс</h1>
 			<span class="zs">  
 				Репетитор по математике для школьников в Минске.
 				Репетиторы по математике и русскому языку, Минск, Беларусь
