M-181. Исправлены ключевые слова.

--- a/shkolnikam.html
+++ b/shkolnikam.html
@@ -7,7 +7,7 @@
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Репетитор по математике с 4 по 11 класс">
-		<meta name="keywords" content="Репетитор по математике с 4 по 11 класс">
+		<meta name="keywords" content="репетитор математика класс, репетитор по математике минск, репетитор, репетитор математик, репетитор по математике, репетитор класс, репетитор математики, репетиторы минск, репетитор по математике в минске, репетитор математика минск, репетиторы беларусь, лучший репетитор по математике, хороший репетитор по математике, репетитор по алгебре, репетитор по геометрии.">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link href="style-new.css" rel="stylesheet" type="text/css">
