--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<a href="otzivi.html#denis">Денис Гайков</a>
 						</div>
 						<div class="ot3">
-							<em>https://vk.com/dorianos</em>
+							<span class="former-em">https://vk.com/dorianos</em>
 						</div>
 						<div class="ot4">
 							 "В 2013 году заканчивал школу 
@@ -132,7 +132,7 @@
 								<a href="otzivi.html#kalenik">Каленик Карина</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id43488026</em>
+								<span class="former-em">https://vk.com/id43488026</em>
 							</div>
 							<div class="ot4">
 															"Хочу сказать спасибо Игорю 
@@ -159,7 +159,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id158624529</em>
+								<span class="former-em">https://vk.com/id158624529</em>
 							</div>
 							<div class="ot4">
 														"Что бы я могла рассказать об
@@ -209,7 +209,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/andrea94</em>
+								<span class="former-em">https://vk.com/andrea94</em>
 							</div>
 							<div class="ot4">
 														"Добрый день всем. Хотелось 
