--- a/mathematics-for-professionals.html
+++ b/mathematics-for-professionals.html
@@ -107,7 +107,7 @@
 							<a href="otzivi.html#denis">Денис Гайков</a>
 						</div>
 						<div class="ot3">
-							<span class="former-em">https://vk.com/dorianos</em>
+							<span class="former-em">https://vk.com/dorianos</span>
 						</div>
 						<div class="ot4">
 							 "В 2013 году заканчивал школу 
@@ -131,7 +131,7 @@
 								<a href="otzivi.html#kalenik">Каленик Карина</a>
 							</div>
 							<div class="ot3">
-								<span class="former-em">https://vk.com/id43488026</em>
+								<span class="former-em">https://vk.com/id43488026</span>
 							</div>
 							<div class="ot4">
 															"Хочу сказать спасибо Игорю 
@@ -158,7 +158,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<span class="former-em">https://vk.com/id158624529</em>
+								<span class="former-em">https://vk.com/id158624529</span>
 							</div>
 							<div class="ot4">
 														"Что бы я могла рассказать об
@@ -207,7 +207,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<span class="former-em">https://vk.com/andrea94</em>
+								<span class="former-em">https://vk.com/andrea94</span>
 							</div>
 							<div class="ot4">
 														"Добрый день всем. Хотелось 
