--- a/mestopolozhenie.html
+++ b/mestopolozhenie.html
@@ -199,7 +199,7 @@
 						Денис Гайков
 					</div></a>
 					<div class="ot3">
-						<span class="former-em">https://vk.com/dorianos</em>
+						<span class="former-em">https://vk.com/dorianos</span>
 					</div>
 					<div class="ot4">
 						"В 2013 году заканчивал школу (Лицей БГУ), решил подтянуть знания по математике, чтобы лучше сдать ЦТ. Когда только пришёл к Игорю Викторовичу, средний результат РТ был около 60 баллов, основные проблемы были связаны с невнимаельностью..." <a href="otzivi.html#denis"><span class="vpr">&gt;&gt;</span></a>
@@ -211,7 +211,7 @@
 							Каленик Карина
 						</div></a>
 						<div class="ot3">
-							<span class="former-em">https://vk.com/id43488026</em>
+							<span class="former-em">https://vk.com/id43488026</span>
 						</div>
 						<div class="ot4">
 							"Хочу сказать спасибо Игорю Викторовичу за осуществление моей мечты! Я закончила 2 курса в ин.язе, а потом по некоторым обстоятельствам была вынуждена уйти. Само собой без высшего образования я оставаться не планировала, моей целью стал БГЭУ..." <a href="otzivi.html#kalenik"><span class="vpr">&gt;&gt;</span></a>
@@ -224,7 +224,7 @@
 							Филимонова Ольга
 						</div></a>
 						<div class="ot3">
-							<span class="former-em">https://vk.com/id158624529</em>
+							<span class="former-em">https://vk.com/id158624529</span>
 						</div>
 						<div class="ot4">
 							"Что бы я могла рассказать об Игоре Викторовиче? Сказать, что он просто хороший преподаватель - явно недооценить все его таланты. Это не заурядный школьный учитель, которому нужно лишь провести свой урок и забыть о своём подопечном..." <a href="otzivi.html#filimonova"><span class="vpr">&gt;&gt;</span></a>
@@ -247,7 +247,7 @@
 							Симбура Андрей
 						</div></a>
 						<div class="ot3">
-							<span class="former-em">https://vk.com/andrea94</em>
+							<span class="former-em">https://vk.com/andrea94</span>
 						</div>
 						<div class="ot4">
 							"Добрый день всем. Хотелось бы сказать пару слов о работе Игоря Викторовича. Впервые обратился к нему, когда необходимо было подготовиться к сдаче ЦТ по математике. Объясняет все очень доходчиво, понятно, если возникают вопросы, то обязательно на них ответит..." <a href="otzivi.html#simb"><span class="vpr">&gt;&gt;</span></a>
