М-57. 3) Вручную меняем em на span c классом для одной строки.

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 				</span>
 				<p></p>
 				<span class="tt1">
-					<em class="roztx">Отдельно выделю следующие направления:</em>
+					<span class="former-em roztx">Отдельно выделю следующие направления:</span>
 				</span><br>
 				<span class="tt2">
 				<span class="roztx">-подготовка по математике для поступления в лицей, колледж, гимназию после 9-го класса;</span><br>
