--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
 				</span>
 			</h2>
 			<div class="op1">
-			Занятия проводит <span class="roztx"> кандидат физико-математических наук</span> с опытом работы более 25 лет.
-			Мной подготовлены <span class="roztx">победители и призеры математических олимпиад</span> различного уровня
-			(свыше 25 учеников), абитуриенты, набравшие на <span class="roztx">ЦТ по математике 100 баллов</span> 
+			Занятия проводит <em>кандидат физико-математических наук</em> с опытом работы более 25 лет.
+			Мной подготовлены <em>победители и призеры математических олимпиад</em> различного уровня
+			(свыше 25 учеников), абитуриенты, набравшие на <em>ЦТ по математике 100 баллов</em> 
 			(более 15 учеников).
 			</div>
 				<span class="p1">
@@ -383,12 +383,11 @@
 				<span class="h21">Основные направления деятельности:</span>
 			</h2>
 			<div class="b1">
-				<span class="zg">Подготовка к ЦТ по математике.</span> <span class="zgt">Более <span class="roztx">500 абитуриентов</span>
+				<span class="zg">Подготовка к ЦТ по математике.</span> <span class="zgt">Более <em>500 абитуриентов</em>
 				с моей помощью поступили в различные вузы Беларуси, дальнего и ближнего зарубежья. Создана электронная база, 
 				включающая в себя все варианты централизованных и репетиционных тестирований всех лет и авторские наработки 
 				с возможностью любой выборки, будь то тема, уровень сложности, год, всевозможные другие критерии и их пересечения. 
-				Также мной осуществляется подготовка к <span class="roztx">ЕГЭ по математике.
-				</span>
+				Также мной осуществляется подготовка к <em>ЕГЭ по математике.</em>
 				</span>
 				<span class="p1">
 					<a href="uslovia_i_ceny2.html">
@@ -398,9 +397,8 @@
 			</div>
 			<div class="b2">
 					<span class="zg">Репетитор по высшей математике.</span>
-					<span class="zgt">Более <span class="roztx">400 студентов</span>
-					подготовлено мной к экзаменам <span class="roztx">по высшей математике</span>
-					<span class="roztx">и другим математическим дисциплинам</span>.
+					<span class="zgt">Более <em>400 студентов</em>
+					подготовлено мной к экзаменам <em>по высшей математике и другим математическим дисциплинам</em>.
 					Все студенты, занимавшиеся на постоянной основе и выполнявшие домашнее задание, сдали экзамен с первого раза.
 					Далеко не все студенты могут самостоятельно освоить разделы высшей математики. Зачастую студенты первого курса
 					не понимают грань, которая разделяет школу и вуз. Скорее всего, материал более не будет «разжевываться», 
@@ -422,7 +420,7 @@
 				<span class="zg">Репетитор по математике для школьников.</span>
 				<span class="zgt">Провожу занятия со школьниками 4, 5, 6, 7, 8, 9, 10 и 11 класса с любым уровнем подготовки. 
 				Считаю основным создание у ученика 
-				<span class="roztx">фундаментальной математической базы</span>, 
+				<em>фундаментальной математической базы</em>, 
 				соответствующей его классу, уровню, 
 				математическим способностям и дальнейшего ее развития. Учу находить взаимосвязь между различными главами 
 				и разделами математики. Постоянно держу на контроле новые темы, зачастую работаю на опережение. 
@@ -435,7 +433,7 @@
 					<span class="former-em roztx">Отдельно выделю следующие направления:</span>
 				</span><br>
 				<span class="tt2">
-				<span class="roztx">-подготовка по математике для поступления в лицей, колледж, гимназию после 9-го класса;</span><br>
+				<em>-подготовка по математике для поступления в лицей, колледж, гимназию после 9-го класса;</em><br>
 			-подготовка к ОГЭ по математике;<br>
 			-подготовка к математическим олимпиадам;<br>
 			-решение нестандартных и логических задач.<br>
@@ -453,10 +451,10 @@
 				<span class="zgt">В последние годы обозначилась тенденция, когда взрослые, зачастую уже состоявшиеся в своей 
 				профессии люди, осознают, что недостаточная математическая база является стопором в дальнейшем развитии и совершенствовании
 				в выбранной специальности. Нередко требуется 
-					<span class="roztx">репетитор по алгебре и геометрии </span> 
+					<em>репетитор по алгебре и геометрии </em>
 					для восстановления основ школьной программы,
 				необходима подготовка по основным главам высшей математики, 
-				<span class="roztx">теории вероятностей</span>, 
+				<em>теории вероятностей</em>, 
 				дальнейший выход на специальные дисциплины.
 				</span>
 				<span class="p1">
@@ -469,11 +467,11 @@
 			<div class="b5">
 				<span class="zg">Онлайн репетитор по математике.</span>
 				<span class="zgt">
-					<span class="roztx">Репетитор по Skype (репетитор по скайпу)
-					</span> для школьников, абитуриентов, студентов и взрослых. Отмечу, что данный вид репетиторства
+					<em>Репетитор по Skype (репетитор по скайпу) </em>
+					для школьников, абитуриентов, студентов и взрослых. Отмечу, что данный вид репетиторства
 					математики на постоянной основе больше подходит для учеников, имеющих определенные навыки и математические 
 					способности. Также оказывается экстренная помощь: 
-					<span class="roztx">репетитор по математике онлайн.</span>
+					<em>репетитор по математике онлайн.</em>
 				</span>
 				<span class="p1">
 					<a href="pomosch_reshenii_zadach.html">
