М-57. 10) <em> at metodika_prepodavania.html

--- a/metodika_prepodavania.html
+++ b/metodika_prepodavania.html
@@ -356,11 +356,11 @@
 		</h2>
 		<div id="realmain" class="zgt">
 				<p class="zgt">
-					- <span class="roztx">решение заданий ЦТ, ЦЭ, РТ, ДРТ, РЦЭ, а также авторских заданий  </span> по разделам за курс базовой школы (5-9 классы)
+					- <em>решение заданий ЦТ, ЦЭ, РТ, ДРТ, РЦЭ, а также авторских заданий</em> по разделам за курс базовой школы (5-9 классы)
 				</p>
 				<p class="zgt">
-					- <span class="roztx">овладение полной теоретической базой и практическими навыками </span>
-					за период обучения на 2-й ступени общего среднего образования согласно  <span class="roztx">программе ЦТ и ЦЭ по математике</span>.
+					- <em>овладение полной теоретической базой и практическими навыками </em>
+					за период обучения на 2-й ступени общего среднего образования согласно  <em>программе ЦТ и ЦЭ по математике</em>.
 				</p>
 				<p class="zgt">
 					- решение неполных вариантов РТ, ЦТ и авторских вариантов (исключая материал 10-11 классов) прошлых лет 
@@ -371,13 +371,13 @@
 		</h2>
 		<div id="realmain" class="zgt">
 				<p class="zgt">
-					- решение тестовых задач по разделам <span class="roztx">за курс старшей школы </span> (10-11 классы)
+					- решение тестовых задач по разделам <em>за курс старшей школы</em> (10-11 классы)
 				</p>
 				<p class="zgt">
 					- овладение полной теоретической базой 10-11 классов</span>.
 				</p>
 				<p class="zgt">
-					- решение неполных вариантов ЦТ и ЦЭ <span class="roztx">(материал 10-11 классов)</span> прошлых лет 
+					- решение неполных вариантов ЦТ и ЦЭ <em>(материал 10-11 классов)</em> прошлых лет 
 				</p>
 		</div>
 		<h2 class="main"> 
@@ -385,10 +385,10 @@
 		</h2>
 		<div id="realmain" class="zgt">
 				<p class="zgt">
-					- решение <span class="roztx">полных вариантов ЦТ, ЦЭ, РТ, ДРТ, РЦЭ</span> прошлых лет
+					- решение <em>полных вариантов ЦТ, ЦЭ, РТ, ДРТ, РЦЭ</em> прошлых лет
 				</p>
 				<p class="zgt">
-					- <span class="roztx">итоговое закрепление </span> пройденного материала. 
+					- <em>итоговое закрепление<em> пройденного материала. 
 				</p>
 		</div>
 			<div class="ck">
@@ -412,52 +412,52 @@
 			<li><div id="realmain" class="zgt">
 				<p class="zgt">
 					<span class="zg">Подготовка к ЦТ и ЦЭ для 11 класса</span>, выпускников колледжей и уже получивших среднее образование.
-					<span class="roztx">Продолжительность занятия – 3 академических часа</span>:
+					<em>Продолжительность занятия – 3 академических часа</em>:
 				</p>
 				<p class="zgt">
-					- <span class="roztx">индивидуальные занятия</span>, продолжительность 3 (135 минут) академических часа,
+					- <em>индивидуальные занятия</em>, продолжительность 3 (135 минут) академических часа,
 					стоимость от 13 до 15 долларов США по курсу продажи в коммерческих банках РБ
 					за один академический час (40-45 долларов за занятие).
 				</p>
 				<p class="zgt">
-					- <span class="roztx">занятия в паре</span>, продолжительность 3 (135 минут) академических часа,
+					- <em>занятия в паре</em>, продолжительность 3 (135 минут) академических часа,
 					стоимость от 11,5 до 12,5 долларов США по курсу продажи в коммерческих банках РБ
 					за один академический час (35-37,5 долларов за занятие) 
 				</p>
 				<p class="zgt">
-					- <span class="roztx">занятия в мини-группах</span>, продолжительность 3 (135 минут) академических часа,
+					- <em>занятия в мини-группах</em>, продолжительность 3 (135 минут) академических часа,
 					стоимость 10 долларов США по курсу продажи в коммерческих банках РБ за один
 					академический час (30 долларов за занятие). В группе от 3 до 7 человек  
 				</p>
 				<p class="zgt">
 					Стабильно отличные и хорошие результаты достигаются при любом виде занятий,
-					<span class="roztx">зачастую лучшие – в мини-группах</span>. Группы строго ранжируются <span class="roztx">по уровню знаний
-					и количеству учащихся</span>. Главное – желание заниматься и быть готовым к
+					<em>зачастую лучшие – в мини-группах</em>. Группы строго ранжируются <em>по уровню знаний
+					и количеству учащихся</em>. Главное – желание заниматься и быть готовым к
 					преодолению трудностей, то есть целеустремленность и трудолюбие. Формат
 					занятия определяю я сам в зависимости от многих факторов. Не стоит думать,
 					что продолжительность занятия (135 минут) велика для вашего ребенка. Помните,
-					что <span class="roztx">ЦТ и ЦЭ по математике продолжается 210 минут</span>, 135 из которых абитуриент
-					должен работать с полной нагрузкой, а оставшееся время уделить <span class="roztx">дополнительной
-					проверке</span> и решению невыполненных заданий, если такие остались.
+					что <em>ЦТ и ЦЭ по математике продолжается 210 минут</em>, 135 из которых абитуриент
+					должен работать с полной нагрузкой, а оставшееся время уделить <em>дополнительной
+					проверке</em> и решению невыполненных заданий, если такие остались.
 				</p>
 		</div></li>
 			<li><div id="realmain" class="zgt">
 				<p class="zgt">
 					<span class="zg">Подготовка к ЦЭ и ЦТ (ученики 10-х классов и младше).</span>
-					<span class="roztx">Продолжительность занятия – 2 академических часа</span>:
+					<em>Продолжительность занятия – 2 академических часа</em>:
 				</p>
 				<p class="zgt">
-					- <span class="roztx">индивидуальные занятия</span>, продолжительность 2 (90 минут) академических часа,
+					- <em>индивидуальные занятия</em>, продолжительность 2 (90 минут) академических часа,
 					стоимость 15 долларов США по курсу продажи в коммерческих банках РБ
 					за один академический час (30 долларов за занятие).
 				</p>
 				<p class="zgt">
-					- <span class="roztx">занятия в паре</span>, продолжительность 2 (90 минут) академических часа, стоимость
+					- <em>занятия в паре</em>, продолжительность 2 (90 минут) академических часа, стоимость
 					12,5 долларов США по курсу продажи в коммерческих банках РБ за один
 					академический час (25 долларов за занятие) 
 				</p>
 				<p class="zgt">
-					- <span class="roztx">занятия в мини-группах</span>, продолжительность 2 (90 минут) академических часа,
+					- <em>занятия в мини-группах</em>, продолжительность 2 (90 минут) академических часа,
 					стоимость 10 долларов США по курсу продажи в коммерческих банках РБ
 					за один академический час (20 долларов за занятие)
 				</p>
@@ -484,8 +484,7 @@
 			<span class="h21">Репетитор по русскому языку Игнатьева Марина Михайловна</span>
 		    </h2>
 			<p class="zgt">
-					Отмечу, что <span class="roztx">моя жена</span> проводит
-					<span class="roztx">подготовку к ЦЭ и ЦТ по русскому языку</span>.
+				Отмечу, что <em>моя жена</em> проводит <em>подготовку к ЦЭ и ЦТ по русскому языку</em>.
 			</p>
 			<span class="p1">
             <a href="russian-language-tutor.html">
@@ -500,9 +499,8 @@
 		    </h2>
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					- Уже долгие годы я периодически <span class="roztx">успешно подготавливаю</span>
-					учеников для поступления в <span class="roztx">престижные вузы Москвы,
-					европейские вузы</span> и другие
+					- Уже долгие годы я периодически <em>успешно подготавливаю</em>
+					учеников для поступления в <em>престижные вузы Москвы, европейские вузы</em> и другие
 				</p>
 				<p class="zgt">
 					- Представление об уровне подготовки вы можете
