--- a/uslovia_i_ceny2.html
+++ b/uslovia_i_ceny2.html
@@ -381,20 +381,20 @@
 					результат ЦТ, мог написать внутренний экзамен.
 				</p>
 				<p class="zgt">
-					- <span class="zg">Этапы:</span> Со временем ЦТ <span class="roztx">стало единственной формой вступительных экзаменов в Беларуси</span>.
+					- <span class="zg">Этапы:</span> Со временем ЦТ <em>стало единственной формой вступительных экзаменов в Беларуси</em>.
 					Так как варианты централизованного тестирования разрабатывались РИКЗ, а не каждым вузом 
 					в отдельности, все абитуриенты оказались в одинаковых и понятных условиях для поступления.
 					Какое-то время можно было сдать ЦТ по 4-м предметам и выбрать из них 3. Однако позднее было
-					разрешено <span class="roztx">сдавать ЦТ только по 3-м предметам</span> для максимальной концентрации учеников
+					разрешено <em>сдавать ЦТ только по 3-м предметам</em> для максимальной концентрации учеников
 					на выбранных дисциплинах.
 				</p>
 				<p class="zgt">
-					- <span class="zg">РТ, РЦЭ, ДРТ:</span> В течение учебного года проводится <span class="roztx">3 этапа РТ</span> (репетиционного тестирования).
+					- <span class="zg">РТ, РЦЭ, ДРТ:</span> В течение учебного года проводится <em>3 этапа РТ</em> (репетиционного тестирования).
 					Однозначно рекомендуем пройти все 3 этапа в очном формате. Это поможет проверить свой уровень 
 					знаний в обстановке, приближенной к реальной, научиться распределять время, проверять себя и
-					исправлять ошибки. <span class="roztx">РЦЭ (репетиционный централизованный экзамен)</span> можно сдавать только выпускникам
+					исправлять ошибки. <em>РЦЭ (репетиционный централизованный экзамен)</em> можно сдавать только выпускникам
 					11-х классов по одному предмету на выбор. Рекомендуем выбирать наиболее важный для себя.
-					Вариант <span class="roztx">ДРТ (демонстрационного репетиционного тестирования)</span> выложен на сайт РИКЗ и обычно
+					Вариант <em>ДРТ (демонстрационного репетиционного тестирования)</em> выложен на сайт РИКЗ и обычно
 					обновляется каждый учебный год, но в 2023-2024 учебном году не менялся.  
 					<span class="p1">
 					   <a href="https://result.rikc.by/ru/free/default.aspx">Смотреть ДРТ</a>
@@ -405,68 +405,66 @@
 					– <span class="zg">Итог:</span> ЦЭ был введен в 2023 году и стал обязательным для выпускников 11-х классов по двум
 					предметам: русскому или белорусскому языкам и предмету на выбор. 3-им испытанием для поступающих
 					в вузы осталось ЦТ. Это нововведение существенно снизило нагрузку на абитуриентов, поступающих
-					сразу после окончания школы, сократив количество экзаменов. Абитуриенты, <span class="roztx">поступающие не в год
-					окончания школы</span>, по-прежнему сдают 3 ЦТ.
+					сразу после окончания школы, сократив количество экзаменов. Абитуриенты, <em>поступающие не в год
+					окончания школы</em>, по-прежнему сдают 3 ЦТ.
 				</p>
 			<h2 class="main"> 
 			
 				<span class="h21">ЦЭ и ЦТ по математике:</span>
 			</h2>
 				<p class="zgt">
-					- <span class="zg">Уровни:</span> Уровень сложности ЦТ <span class="roztx">по математике</span> с годами возрастал, далее сложность
-					вариантов колебалась в зависимости от года и <span class="roztx">в 2023 году с введением ЦЭ снизилась</span>.
+					- <span class="zg">Уровни:</span> Уровень сложности ЦТ <em>по математике</em> с годами возрастал, далее сложность
+					вариантов колебалась в зависимости от года и <em>в 2023 году с введением ЦЭ снизилась</em>.
 				</p>
 				<p class="zgt">
 					- <span class="zg">Система оценивания:</span> Первая система оценивания основывалась на выставлении баллов
-					за решенное задание в зависимости от процента абитуриентов его решивших: <span class="roztx">чем меньше учащихся
-					справились с заданием, тем больше баллов за него давали</span>. Далее пришли к первичным
-					баллам: <span class="roztx">1 балл за решенное задание в части А и 2 балла – в части Б</span>. Позднее в части Б появились
+					за решенное задание в зависимости от процента абитуриентов его решивших: <em>чем меньше учащихся
+					справились с заданием, тем больше баллов за него давали</em>. Далее пришли к первичным
+					баллам: <em>1 балл за решенное задание в части А и 2 балла – в части Б</em>. Позднее в части Б появились
 					несколько заданий с выбором ответа, в которых можно получить 1 балл, допустив одну
-					ошибку (частично верный ответ). <span class="roztx">Результат был прямо пропорционален проценту</span> полученных баллов
+					ошибку (частично верный ответ). <em>Результат был прямо пропорционален проценту</em> полученных баллов
 					или близок к этому. По-простому: решил правильно 80% заданий – получил 80 баллов. На мой взгляд,
 					самая простая и справедливая система оценивания. Однако систему оценивания попытались привязать к
-					нормальному распределению Гаусса) Эксперимент закончился неудачей. Сейчас существует <span class="roztx">шкала перевода</span>,
+					нормальному распределению Гаусса) Эксперимент закончился неудачей. Сейчас существует <em>шкала перевода</em>,
 					в которой ученик, набравший больше первичных баллов, получит больше итоговых.  Но абитуриент,
 					набравший 100% первичных баллов, получает свои заслуженные 100 итоговых баллов, а абитуриент,
 					набравший 28% первичных баллов, получает 50 итоговых. Таким образом, разрыв между сильным и
 					слабым абитуриентом уменьшается в пользу последнего.
 				</p>
 				<p class="zgt">
-					- <span class="zg">Структура:</span> Сначала <span class="roztx">ЦТ по математике</span> содержало 20 заданий, позже 25, и постепенно число заданий
+					- <span class="zg">Структура:</span> Сначала <em>ЦТ по математике</em> содержало 20 заданий, позже 25, и постепенно число заданий
 					достигло 30. Происходило последовательное увеличение заданий в части Б (без выбора ответа) и уменьшение
-					в части А (с выбором ответа). В последние годы стало <span class="roztx">10 заданий в части А и
-					20 в части Б.</span> Максимально
-					можно набрать <span class="roztx">50 первичных баллов</span>. Данные изменения
+					в части А (с выбором ответа). В последние годы стало <em>10 заданий в части А и
+					20 в части Б.</em> Максимально можно набрать <em>50 первичных баллов</em>. Данные изменения
 					логичны и позитивны. Периодически увеличивалось
-					и время, отведенное на испытание: в данный момент на ЦТ по математике
-					дается <span class="roztx">3 часа и 30 минут</span>.
+					и время, отведенное на испытание: в данный момент на ЦТ по математике дается <em>3 часа и 30 минут</em>.
 				</p>
 				<p class="zgt">
-					- <span class="zg">ЦЭ или ЦТ:</span> Данный вопрос актуален для выпускников 11-х классов. <span class="roztx">Уровень ЦТ и ЦЭ по математике
-					одинаков</span>, разница в том, что оценка по ЦЭ может повлиять на итоговую оценку в аттестате, и ЦЭ вы
+					- <span class="zg">ЦЭ или ЦТ:</span> Данный вопрос актуален для выпускников 11-х классов. <em>Уровень ЦТ и ЦЭ по математике
+					одинаков</em>, разница в том, что оценка по ЦЭ может повлиять на итоговую оценку в аттестате, и ЦЭ вы
 					сдадите немного раньше. Большинство моих учеников в 2023, 2024 годах предпочли сдавать ЦЭ по математике,
 					так как чувствовали себя в этом предмете более уверенно. И это правильный шаг с точки зрения психологии.
 					Однако один из моих учеников решил сдавать ЦТ по математике и ЦЭ по физике, так как по математике
 					итоговая оценка в аттестате была 10, а по физике 9. Т.е. по физике оценку можно было улучшить, а по
-					математике она и так максимальна. Решение было взвешенным и себя оправдало. Вердикт таков: <span class="roztx">решать вам!</span>
+					математике она и так максимальна. Решение было взвешенным и себя оправдало. Вердикт таков: <em>решать вам!</em>
 				</p>
 					<p class="zgt">
 					- <span class="zg">Итог:</span> В связи с вышесказанным нужно понимать, что 60 баллов на ЦТ в некоторые прошлые годы
-					могут соответствовать 80-90 теперь. <span class="roztx">ЦЭ и ЦТ являются более объективными формами контроля знаний</span>,
+					могут соответствовать 80-90 теперь. <em>ЦЭ и ЦТ являются более объективными формами контроля знаний</em>,
 					чем внутренние экзамены в вузах. Вызывает определенное беспокойство некоторое снижение
 					уровня сложности испытания. Также, на мой взгляд, стоит усилить контроль за его проведением. Но
-					в подавляющем большинстве <span class="roztx">результат ЦЭ или ЦТ зависит от способностей и трудолюбия ученика, а также
-					уровня и профессионализма преподавателя</span>. 
+					в подавляющем большинстве <em>результат ЦЭ или ЦТ зависит от способностей и трудолюбия ученика, а также
+					уровня и профессионализма преподавателя</em>. 
 				</p>
 				<h2 class="main"> 
 			
 				<span class="h21">Подготовка к ЦЭ и ЦТ по математике в Минске. Репетитор по математике (ЦТ, ЦЭ, 11 класс, 10 класс) проводит подготовку к ЦТ и ЦЭ и подготовку по математике для поступления в зарубежные вузы (вузы РФ, вузы Европы и другие)</span>
 			    </h2>
 				<p class="zgt">
-					- Более <span class="roztx">550 абитуриентов</span> с моей помощью поступили в различные вузы Беларуси,
-					дальнего и ближнего зарубежья. Более <span class="roztx">20 раз</span> мои ученики на ЦТ и ЦЭ по математике
-					получали <span class="roztx">100 баллов</span>. Рекомендую заниматься <span class="roztx">2 раза в неделю</span>. Мной предусмотрены все
-					условия для <span class="roztx">занятий онлайн</span> (профессиональная аппаратура, высокоскоростной интернет,
+					- Более <em>550 абитуриентов</em> с моей помощью поступили в различные вузы Беларуси,
+					дальнего и ближнего зарубежья. Более <em>20 раз</em> мои ученики на ЦТ и ЦЭ по математике
+					получали <em>100 баллов</em>. Рекомендую заниматься <em>2 раза в неделю</em>. Мной предусмотрены все
+					условия для <em>занятий онлайн</em> (профессиональная аппаратура, высокоскоростной интернет,
 					вывод на большой экран, Full HD видео), но все-таки по возможности рекомендую очное
 					присутствие. Также возможен смешанный формат, когда основная часть группы занимается
 					очно, а те, кто болеет или находится не в Минске, работают в онлайн формате.
@@ -474,9 +472,9 @@
 				<p class="zgt">
 					- Я не могу набирать много учеников для подготовки к ЦТ, так как занимаюсь с
 					учениками от 4-го до 11-го класса, студентами, взрослыми, олимпиадным движением
-					и т.д. В среднем я набираю <span class="roztx">для подготовки к ЦТ и ЦЭ</span> 2 группы. Как правило, одна
-					группа сильнее, вторая слабее. В 2023 году <span class="roztx">средний балл</span> сильной группы составлял
-					97 баллов, а в 2024-м <span class="roztx">выше 98</span>. Отмечу, что это ни одна группа из 10, а одна их
+					и т.д. В среднем я набираю <em>для подготовки к ЦТ и ЦЭ</em> 2 группы. Как правило, одна
+					группа сильнее, вторая слабее. В 2023 году <em>средний балл</em> сильной группы составлял
+					97 баллов, а в 2024-м <em>выше 98</em>. Отмечу, что это ни одна группа из 10, а одна их
 					двух) Результаты слабой группы в основном укладываются в диапазон от  70 до 92
 					баллов. Нужно понимать, что слабого и ленивого ученика сложнее вытянуть на 70+,
 					чем сильного и трудолюбивого на 95+
@@ -487,42 +485,41 @@
 					Математику нужно знать целиком: легко переходить от одной темы к другой
 					независимо от уровня сложности.  Поэтому обширная практическая часть включает
 					множество разнообразных заданий от нынешнего уровня сложности ЦЭ и выше. Моя
-					задача не только в том, чтобы абитуриент мог <span class="roztx">сдать ЦЭ или ЦТ</span>, но и в том, чтобы
-					он мог в дальнейшем <span class="roztx">успешно учиться в вузе</span>. Учащийся
-					должен быть <span class="roztx">готов к любому
-					возможному варианту итогового испытания</span>.
+					задача не только в том, чтобы абитуриент мог <em>сдать ЦЭ или ЦТ</em>, но и в том, чтобы
+					он мог в дальнейшем <em>успешно учиться в вузе</em>. Учащийся
+					должен быть <em>готов к любому возможному варианту итогового испытания</em>.
 				</p>
 				<p class="zgt">
-					- Мною создана электронная <span class="roztx">база</span>, включающая в себя все варианты  <span class="roztx">ЦТ, РТ, ДРТ, ЦЭ,
-					РЦЭ по математике</span> за все время проведения ЦТ и ЦЭ, и, конечно, авторские
+					- Мною создана электронная <em>база</em>, включающая в себя все варианты  <em>ЦТ, РТ, ДРТ, ЦЭ,
+					РЦЭ по математике</em> за все время проведения ЦТ и ЦЭ, и, конечно, авторские
 					наработки. Имеется возможность любой выборки:  по темам, уровню сложности, по
 					годам и всевозможным другим критериям и их пересечениям. База обновляется 4 раза
 					в год. Ответы к ЦТ при выборке из базы  абитуриенту не известны. Таким образом,
-					любой <span class="roztx">выборочный контроль объективно оценивает знания ученика</span>. 
+					любой <em>выборочный контроль объективно оценивает знания ученика</em>. 
 				</p>
 					<p class="zgt">
-					- Процесс <span class="roztx">подготовки к ЦТ и ЦЭ</span>  по математике
-					предусматривает  <span class="roztx">объемное домашнее
-					задание</span>, постоянный <span class="roztx">контроль теоретического
-					материала</span>, овладевание методами и
-					приемами, зачастую не встречавшимися ранее, <span class="roztx">разбор задач-ловушек, применение
-					нестандартных и креативных ходов</span>. Подробно разбираются все
-					основные <span class="roztx">разделы
-					алгебры и геометрии</span>, включенные в программу для подготовки к <span class="roztx">ЦТ и ЦЭ по
-					математике.</span>
+					- Процесс <em>подготовки к ЦТ и ЦЭ</em>  по математике
+					предусматривает  <em>объемное домашнее
+					задание</em>, постоянный <em>контроль теоретического
+					материала</em>, овладевание методами и
+					приемами, зачастую не встречавшимися ранее, <em>разбор задач-ловушек, применение
+					нестандартных и креативных ходов</em>. Подробно разбираются все
+					основные <em>разделы
+					алгебры и геометрии</em>, включенные в программу для подготовки к <em>ЦТ и ЦЭ по
+					математике.</em>
 				</p>
 				<p class="zgt">
-					- Разбирается и осваивается на практике <span class="roztx">метод
-					ограничений</span>, графический метод,
-					<span class="roztx">функциональный метод</span>, использование
-					<span class="roztx">свойства четности функций</span> при решении
+					- Разбирается и осваивается на практике <em>метод
+					ограничений</em>, графический метод,
+					<em>функциональный метод</em>, использование
+					<em>свойства четности функций</em> при решении
 					уравнений и различные другие аналитические методы. 
-					Изучается <span class="roztx">метод площадей</span>,
-					метод объемов, стандартные и нестандартные <span class="roztx">методы
-					построения сечений</span>, применение
-					<span class="roztx">подобия и теоремы Фалеса</span> при решении задач
-					по планиметрии и стереометрии, <span class="roztx">схема
-					Горнера</span> и многое другое.
+					Изучается <em>метод площадей</em>,
+					метод объемов, стандартные и нестандартные <em>методы
+					построения сечений</em>, применение
+					<em>подобия и теоремы Фалеса</em> при решении задач
+					по планиметрии и стереометрии, <em>схема
+					Горнера</em> и многое другое.
 				</p>
 				
 			    <p class="zgt">
