М-57. 13) <span class="zg"> to <strong>

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 				<span class="h21">Основные направления деятельности:</span>
 			</h2>
 			<div class="b1">
-				<span class="zg">Подготовка к ЦТ по математике.</span> <span class="zgt">Более <em>500 абитуриентов</em>
+				<strong>Подготовка к ЦТ по математике.</strong> <span class="zgt">Более <em>500 абитуриентов</em>
 				с моей помощью поступили в различные вузы Беларуси, дальнего и ближнего зарубежья. Создана электронная база, 
 				включающая в себя все варианты централизованных и репетиционных тестирований всех лет и авторские наработки 
 				с возможностью любой выборки, будь то тема, уровень сложности, год, всевозможные другие критерии и их пересечения. 
@@ -396,7 +396,7 @@
 					<span class="strelki">&gt;&gt;</span></span>
 			</div>
 			<div class="b2">
-					<span class="zg">Репетитор по высшей математике.</span>
+					<strong>Репетитор по высшей математике.</strong>
 					<span class="zgt">Более <em>400 студентов</em>
 					подготовлено мной к экзаменам <em>по высшей математике и другим математическим дисциплинам</em>.
 					Все студенты, занимавшиеся на постоянной основе и выполнявшие домашнее задание, сдали экзамен с первого раза.
@@ -417,7 +417,7 @@
 					</span>
 			</div>
 			<div class="b3">
-				<span class="zg">Репетитор по математике для школьников.</span>
+				<strong>Репетитор по математике для школьников.</strong>
 				<span class="zgt">Провожу занятия со школьниками 4, 5, 6, 7, 8, 9, 10 и 11 класса с любым уровнем подготовки. 
 				Считаю основным создание у ученика 
 				<em>фундаментальной математической базы</em>, 
@@ -447,7 +447,7 @@
 				</span>
 			</div>
 			<div class="b4">
-				<span class="zg">Репетитор по математике для взрослых.</span>
+				<strong>Репетитор по математике для взрослых.</strong>
 				<span class="zgt">В последние годы обозначилась тенденция, когда взрослые, зачастую уже состоявшиеся в своей 
 				профессии люди, осознают, что недостаточная математическая база является стопором в дальнейшем развитии и совершенствовании
 				в выбранной специальности. Нередко требуется 
@@ -465,7 +465,7 @@
 				</span>
 			</div>
 			<div class="b5">
-				<span class="zg">Онлайн репетитор по математике.</span>
+				<strong>Онлайн репетитор по математике.</strong>
 				<span class="zgt">
 					<em>Репетитор по Skype (репетитор по скайпу) </em>
 					для школьников, абитуриентов, студентов и взрослых. Отмечу, что данный вид репетиторства
