--- a/metodika_prepodavania.html
+++ b/metodika_prepodavania.html
@@ -411,7 +411,7 @@
 			<ol>
 			<li><div id="realmain" class="zgt">
 				<p class="zgt">
-					<span class="zg">Подготовка к ЦТ и ЦЭ для 11 класса</span>, выпускников колледжей и уже получивших среднее образование.
+					<strong>Подготовка к ЦТ и ЦЭ для 11 класса</strong>, выпускников колледжей и уже получивших среднее образование.
 					<em>Продолжительность занятия – 3 академических часа</em>:
 				</p>
 				<p class="zgt">
@@ -443,7 +443,7 @@
 		</div></li>
 			<li><div id="realmain" class="zgt">
 				<p class="zgt">
-					<span class="zg">Подготовка к ЦЭ и ЦТ (ученики 10-х классов и младше).</span>
+					<strong>Подготовка к ЦЭ и ЦТ (ученики 10-х классов и младше).</strong>
 					<em>Продолжительность занятия – 2 академических часа</em>:
 				</p>
 				<p class="zgt">
