--- a/uslovia_i_ceny2.html
+++ b/uslovia_i_ceny2.html
@@ -376,12 +376,12 @@
 			</h2>
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					- <span class="zg">История:</span> ЦТ введено в начале 2000-ых годов как альтернативная форма  вступительных
+					- <strong>История:</strong> ЦТ введено в начале 2000-ых годов как альтернативная форма  вступительных
 					экзаменов в некоторые высшие учебные заведения РБ и РФ. Абитуриент, которого не устраивал
 					результат ЦТ, мог написать внутренний экзамен.
 				</p>
 				<p class="zgt">
-					- <span class="zg">Этапы:</span> Со временем ЦТ <em>стало единственной формой вступительных экзаменов в Беларуси</em>.
+					- <strong>Этапы:</strong> Со временем ЦТ <em>стало единственной формой вступительных экзаменов в Беларуси</em>.
 					Так как варианты централизованного тестирования разрабатывались РИКЗ, а не каждым вузом 
 					в отдельности, все абитуриенты оказались в одинаковых и понятных условиях для поступления.
 					Какое-то время можно было сдать ЦТ по 4-м предметам и выбрать из них 3. Однако позднее было
@@ -389,7 +389,7 @@
 					на выбранных дисциплинах.
 				</p>
 				<p class="zgt">
-					- <span class="zg">РТ, РЦЭ, ДРТ:</span> В течение учебного года проводится <em>3 этапа РТ</em> (репетиционного тестирования).
+					- <strong>РТ, РЦЭ, ДРТ:</strong> В течение учебного года проводится <em>3 этапа РТ</em> (репетиционного тестирования).
 					Однозначно рекомендуем пройти все 3 этапа в очном формате. Это поможет проверить свой уровень 
 					знаний в обстановке, приближенной к реальной, научиться распределять время, проверять себя и
 					исправлять ошибки. <em>РЦЭ (репетиционный централизованный экзамен)</em> можно сдавать только выпускникам
@@ -402,7 +402,7 @@
 				</p>
 				<p class="zgt">
 					
-					– <span class="zg">Итог:</span> ЦЭ был введен в 2023 году и стал обязательным для выпускников 11-х классов по двум
+					– <strong>Итог:</strong> ЦЭ был введен в 2023 году и стал обязательным для выпускников 11-х классов по двум
 					предметам: русскому или белорусскому языкам и предмету на выбор. 3-им испытанием для поступающих
 					в вузы осталось ЦТ. Это нововведение существенно снизило нагрузку на абитуриентов, поступающих
 					сразу после окончания школы, сократив количество экзаменов. Абитуриенты, <em>поступающие не в год
@@ -413,11 +413,11 @@
 				<span class="h21">ЦЭ и ЦТ по математике:</span>
 			</h2>
 				<p class="zgt">
-					- <span class="zg">Уровни:</span> Уровень сложности ЦТ <em>по математике</em> с годами возрастал, далее сложность
+					- <strong>Уровни:</strong> Уровень сложности ЦТ <em>по математике</em> с годами возрастал, далее сложность
 					вариантов колебалась в зависимости от года и <em>в 2023 году с введением ЦЭ снизилась</em>.
 				</p>
 				<p class="zgt">
-					- <span class="zg">Система оценивания:</span> Первая система оценивания основывалась на выставлении баллов
+					- <strong>Система оценивания:</strong> Первая система оценивания основывалась на выставлении баллов
 					за решенное задание в зависимости от процента абитуриентов его решивших: <em>чем меньше учащихся
 					справились с заданием, тем больше баллов за него давали</em>. Далее пришли к первичным
 					баллам: <em>1 балл за решенное задание в части А и 2 балла – в части Б</em>. Позднее в части Б появились
@@ -432,7 +432,7 @@
 					слабым абитуриентом уменьшается в пользу последнего.
 				</p>
 				<p class="zgt">
-					- <span class="zg">Структура:</span> Сначала <em>ЦТ по математике</em> содержало 20 заданий, позже 25, и постепенно число заданий
+					- <strong>Структура:</strong> Сначала <em>ЦТ по математике</em> содержало 20 заданий, позже 25, и постепенно число заданий
 					достигло 30. Происходило последовательное увеличение заданий в части Б (без выбора ответа) и уменьшение
 					в части А (с выбором ответа). В последние годы стало <em>10 заданий в части А и
 					20 в части Б.</em> Максимально можно набрать <em>50 первичных баллов</em>. Данные изменения
@@ -440,7 +440,7 @@
 					и время, отведенное на испытание: в данный момент на ЦТ по математике дается <em>3 часа и 30 минут</em>.
 				</p>
 				<p class="zgt">
-					- <span class="zg">ЦЭ или ЦТ:</span> Данный вопрос актуален для выпускников 11-х классов. <em>Уровень ЦТ и ЦЭ по математике
+					- <strong>ЦЭ или ЦТ:</strong> Данный вопрос актуален для выпускников 11-х классов. <em>Уровень ЦТ и ЦЭ по математике
 					одинаков</em>, разница в том, что оценка по ЦЭ может повлиять на итоговую оценку в аттестате, и ЦЭ вы
 					сдадите немного раньше. Большинство моих учеников в 2023, 2024 годах предпочли сдавать ЦЭ по математике,
 					так как чувствовали себя в этом предмете более уверенно. И это правильный шаг с точки зрения психологии.
@@ -449,7 +449,7 @@
 					математике она и так максимальна. Решение было взвешенным и себя оправдало. Вердикт таков: <em>решать вам!</em>
 				</p>
 					<p class="zgt">
-					- <span class="zg">Итог:</span> В связи с вышесказанным нужно понимать, что 60 баллов на ЦТ в некоторые прошлые годы
+					- <strong>Итог:</strong> В связи с вышесказанным нужно понимать, что 60 баллов на ЦТ в некоторые прошлые годы
 					могут соответствовать 80-90 теперь. <em>ЦЭ и ЦТ являются более объективными формами контроля знаний</em>,
 					чем внутренние экзамены в вузах. Вызывает определенное беспокойство некоторое снижение
 					уровня сложности испытания. Также, на мой взгляд, стоит усилить контроль за его проведением. Но
@@ -523,7 +523,8 @@
 				</p>
 				
 			    <p class="zgt">
-				<span class="zg">Для получения информации об этапах подготовки к ЦТ по математике, условиях и ценах, репетиторе по русскому языку для подготовки к ЦТ и ЦЭ, подготовке по математике в зарубежные вузы, перейдите по ссылке:</span>
+				<strong>Для получения информации об этапах подготовки к ЦТ по математике, условиях и ценах, 
+				репетиторе по русскому языку для подготовки к ЦТ и ЦЭ, подготовке по математике в зарубежные вузы, перейдите по ссылке:</strong>
 			    </p>
 				<span class="p1">
                 <a href="metodika_prepodavania.html">Информация о ценах, ЦТ по русскому, подготовке в зарубежные вузы </a>
