--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 				</span>
 				<p></p>
 				<span class="tt1">
-					<span class="former-em roztx">Отдельно выделю следующие направления:</span>
+					<span class="former-em" style="color:rgb(255, 90, 90);">Отдельно выделю следующие направления:</span>
 				</span><br>
 				<span class="tt2">
 				<em>-подготовка по математике для поступления в лицей, колледж, гимназию после 9-го класса;</em><br>
