M-57. Styles <strong> и <em> with purge of older ones. (#189)
* М-57. 1) Меняем '<em>' на '<span class="former-em">'.

* М-57. 2) Меняем '</em>' на '</span>'.

* М-57. 3) Вручную меняем em на span c классом для одной строки.

* М-57. 4) В style.css ' em{' на ' .former-em{'

* М-57. 5) В style.css создаём strong и em в css на основании существующих классов (.zg и .roztx).

* М-57. 6) Добавляем для .former-em наклонный стиль: font-style: italic;

* М-57. 7) Добавляем для .former-em наклонный стиль: font-style: italic; - именно отдельной строкой, а не внутри класса отзывов.

* М-57. 8) Исправление для строки "Отдельно выделю следующие направления"

* М-57. 8) font-style: normal; /* вместо italic, дефолтного для em */

* М-57. 9) <em> at index.html.

* М-57. 10) <em> at metodika_prepodavania.html

* М-57. 11) <em> at uslovia_i_ceny2.html

* М-57. 12) correct color for <strong>

* М-57. 13) <span class="zg"> to <strong>

* М-57. 14) Size of strong changed from 23 (that smaller than usual text of 28) to 30 at wide (1800 and more) screens.

* М-57. 15) removed .roztx

* М-57. 16) removed .zg

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 							<a href="otzivi.html#denis">Денис Гайков</a>
 						</div>
 						<div class="ot3">
-							<em>https://vk.com/dorianos</em>
+							<span class="former-em">https://vk.com/dorianos</span>
 						</div>
 						<div class="ot4">
 							 "В 2013 году заканчивал школу 
@@ -129,7 +129,7 @@
 								<a href="otzivi.html#kalenik">Каленик Карина</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id43488026</em>
+								<span class="former-em">https://vk.com/id43488026</span>
 							</div>
 							<div class="ot4">
 															"Хочу сказать спасибо Игорю 
@@ -156,7 +156,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id158624529</em>
+								<span class="former-em">https://vk.com/id158624529</span>
 							</div>
 							<div class="ot4">
 														"Что бы я могла рассказать об
@@ -205,7 +205,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/andrea94</em>
+								<span class="former-em">https://vk.com/andrea94</span>
 							</div>
 							<div class="ot4">
 														"Добрый день всем. Хотелось 
