--- a/otzivi.html
+++ b/otzivi.html
@@ -216,7 +216,7 @@
 						Денис Гайков
 					</div></a>
 					<div class="ot3">
-						 <em>https://vk.com/dorianos</em>
+						 <span class="former-em">https://vk.com/dorianos</span>
 					</div>
 					<div class="ot4">
 						 "В 2013 году заканчивал школу 
@@ -236,7 +236,7 @@
 						Каленик Карина
 					</div></a>
 					<div class="ot3">
-						 <em>https://vk.com/id43488026</em>
+						 <span class="former-em">https://vk.com/id43488026</span>
 					</div>
 					<div class="ot4">
 						"Хочу сказать спасибо Игорю 
@@ -256,7 +256,7 @@
 						Филимонова Ольга
 					</div></a>
 					<div class="ot3">
-						 <em>https://vk.com/id158624529</em>
+						 <span class="former-em">https://vk.com/id158624529</span>
 					</div>
 					<div class="ot4">
 						"Что бы я могла рассказать об
@@ -292,7 +292,7 @@
 						Симбура Андрей
 					</div></a>
 					<div class="ot3">
-						 <em>https://vk.com/andrea94</em>
+						 <span class="former-em">https://vk.com/andrea94</span>
 					</div>
 					<div class="ot4">
 						"Добрый день всем. Хотелось 
@@ -467,7 +467,7 @@
 		<div class="t0">Подготовка к ЦТ по математике, отзывы</div></div>
 	</div>
 	<div class="tq40"><div class="comment_abitd">
-		<div id="denis"><div class="txx1">Денис Гайков <a target="_blank" href="https://vk.com/dorianos"><span class="vkic"><em>https://vk.com/dorianos</em></span></a></div></div></div>
+		<div id="denis"><div class="txx1">Денис Гайков <a target="_blank" href="https://vk.com/dorianos"><span class="vkic"><span class="former-em">https://vk.com/dorianos</span></span></a></div></div></div>
 	</div>
 		<div class="tq5">
 			<div class="tr1">В 2013 году заканчивал школу (Лицей БГУ), решил подтянуть знания по математике, чтобы 
@@ -497,7 +497,7 @@
 он через 2 года освежил всё в памяти и сдал на 100 баллов . Что тут добавить? Снимаю шляпу . <span class="fotk"><img src="./images/advantages/smile.png" style="vertical-align: middle;"></span> </div>
 		</div>
 		<div class="tq40"><div class="comment_abit">
-		<div id="kovalenko"><div class="txx1">Коваленко Александра<span class="vkic"><em>evreika86@mail.ru</em></span></div></div>
+		<div id="kovalenko"><div class="txx1">Коваленко Александра<span class="vkic"><span class="former-em">evreika86@mail.ru</span></span></div></div>
 		</div>
 	</div>
 	<div class="tq7">
@@ -518,7 +518,7 @@
 итоге - достойный результат при сдаче ЦТ .</div>
 	  </div>	 
 		<div class="tq40"><div class="comment_abit">
-		<div id="kalenik"><div class="txx1">Каленик Карина<a target="_blank" href="https://vk.com/id43488026"><span class="vkic"><em>https://vk.com/id43488026</em></span></a></div></div></div>
+		<div id="kalenik"><div class="txx1">Каленик Карина<a target="_blank" href="https://vk.com/id43488026"><span class="vkic"><span class="former-em">https://vk.com/id43488026</span></span></a></div></div></div>
 	</div>	
 	<div class="tq8">
 <div class="yt1">Хочу сказать спасибо Игорю Викторовичу за осуществление моей мечты! Я закончила 2 курса в инязе, а
@@ -568,7 +568,7 @@
 		<div class="t0">Отзывы о репетиторе по высшей математике, Минск</div></div>
 	</div>
 	<div class="tq40"><div class="comment_abit">
-		<div id="filimonova"><div class="txx1">Филимонова Ольга<a target="_blank" href="https://vk.com/id158624529"><span class="vkic"><em>https://vk.com/id158624529 </em></span></a></div></div></div>
+		<div id="filimonova"><div class="txx1">Филимонова Ольга<a target="_blank" href="https://vk.com/id158624529"><span class="vkic"><span class="former-em">https://vk.com/id158624529 </span></span></a></div></div></div>
 	</div>	
 	<div class="tq10">
 	<div class="yt2v_big">
@@ -697,7 +697,7 @@
 	</div>
 	</div>
 	<div class="tq40"><div class="comment_abit">
-		<div id="simb"><div class="txx1">Симбура Андрей<a target="_blank" href="https://vk.com/andrea94"><span class="vkic"><em>https://vk.com/andrea94</em></span></a></div></div></div>
+		<div id="simb"><div class="txx1">Симбура Андрей<a target="_blank" href="https://vk.com/andrea94"><span class="vkic"><span class="former-em">https://vk.com/andrea94</span></span></a></div></div></div>
 	</div>
 	<div class="tq14">
 	<div class="yt2v_big">
